@@ -374,6 +374,7 @@ DECL_TEMPLATE(linux, sys_statmount);
 DECL_TEMPLATE(linux, sys_mseal);
 DECL_TEMPLATE(linux, sys_lsm_get_self_attr);
 DECL_TEMPLATE(linux, sys_lsm_set_self_attr);
+DECL_TEMPLATE(linux, sys_lsm_list_modules);
 
 // Since Linux 6.17-rc1
 DECL_TEMPLATE(linux, sys_file_getattr);
