@@ -797,8 +797,9 @@ static SyscallTableEntry syscall_main_table[] = {
    LINXY (__NR_userfaultfd, sys_userfaultfd),
    LINXY (__NR_statmount, sys_statmount),
    LINXY (__NR_listmount, sys_listmount),
-   LINXY(__NR_lsm_get_self_attr, sys_lsm_get_self_attr),
-   LINX_(__NR_lsm_set_self_attr, sys_lsm_set_self_attr),
+   LINXY (__NR_lsm_get_self_attr, sys_lsm_get_self_attr),
+   LINX_ (__NR_lsm_set_self_attr, sys_lsm_set_self_attr),
+   LINXY (__NR_lsm_list_modules, sys_lsm_list_modules),
    LINX_ (__NR_mseal, sys_mseal),
    LINX_ (__NR_futex_waitv, sys_futex_waitv),
    LINXY (__NR_quotactl_fd, sys_quotactl_fd),
