@@ -900,8 +900,9 @@ static SyscallTableEntry syscall_table[] = {
    LINX_ (__NR_fchmodat2, sys_fchmodat2),                             // 452
    LINXY (__NR_statmount, sys_statmount),                             // 457
    LINXY (__NR_listmount, sys_listmount),                             // 458
-   LINXY(__NR_lsm_get_self_attr, sys_lsm_get_self_attr),              // 459
-   LINX_(__NR_lsm_set_self_attr, sys_lsm_set_self_attr),              // 460
+   LINXY (__NR_lsm_get_self_attr, sys_lsm_get_self_attr),             // 459
+   LINX_ (__NR_lsm_set_self_attr, sys_lsm_set_self_attr),             // 460
+   LINXY (__NR_lsm_list_modules, sys_lsm_list_modules),               // 461
    LINX_ (__NR_mseal, sys_mseal),                                     // 462
    LINXY (__NR_file_getattr, sys_file_getattr),                       // 468
    LINX_ (__NR_file_setattr, sys_file_setattr),                       // 469
