@@ -62,6 +62,7 @@
 #define __NR_listmount		458
 #define __NR_lsm_get_self_attr	459
 #define __NR_lsm_set_self_attr	460
+#define __NR_lsm_list_modules   461
 #define __NR_mseal		462
 #define __NR_file_getattr	468
 #define __NR_file_setattr	469
